--- a/sender/Dockerfile
+++ b/sender/Dockerfile
@@ -1,10 +1,11 @@
-# Dockerfile для отправителя (sender)
 FROM python:3.11-slim-buster
 
+COPY requirements.txt /app/sender/requirements.txt
+
+RUN pip install -r /app/sender/requirements.txt
+
+COPY sender /app/sender
+
 WORKDIR /app/sender
-
-COPY sender/producer.py .
-
-RUN pip install pika
 
 CMD ["python", "producer.py"]
